--- a/code practice/main.css
+++ b/code practice/main.css
@@ -44,7 +44,7 @@ video {
 	cursor: pointer;
 }
 
-.nav:hover + #content {
+.nav:hover + .content {
 	width: 85%;
 	-moz-transition: 0.3s width ease-in-out;
 	-o-transition: 0.3s width ease-in-out;
@@ -66,24 +66,30 @@ video {
 	top: 0;
 	margin: 0;
 	margin-left: 5%;
-	background-color: #932626;
 	float: right
 }
 
-.iam-logo {
+.content-left {
+	width: 45%;
+	height: 100%;
+	background-color: blue;
+	float: left;
+	z-index: 5;
+}
+
+.content-right {
+	width: 55%;
+	height: 100%;
+	background-color: red;
+	float: right;
+}
+
+#iam-logo {
 	width: 100%;
 	position: absolute;
 	left: 0;
 	top: 33%;
-	z-index: 4;
 	text-align: center;
 	vertical-align: middle;
 	opacity: 0.8;
-}
-
-.abc {
-	background-color: blue;
-	width: 200px;
-	height: 100px;
-	float: left;
 }
