--- a/IAM website FA15/css/main.css
+++ b/IAM website FA15/css/main.css
@@ -4,88 +4,171 @@ body, html {
 }
 
 video {
+	width: auto;
 	min-height: 100%;
 	position: absolute;
 	left: 0;
 	top: 0;
+	z-index: 0;
 }
 
 .video-layer {
 	width: 100%;
 	height: 100%;
-<<<<<<< Updated upstream
-	opacity: 0.4;
-=======
-	opacity: 0.3;
->>>>>>> Stashed changes
+	opacity: 1;
 	position: absolute;
 	left: 0;
 	top: 0;
-	background-color: #ecebe6;
-	z-index: 3;
+	background-color: #302b3c;
+	z-index: 10;
 	text-align: center;
 	vertical-align: middle;
+	opacitiy: 0.5;
+}
+
+.collapsed > .nav {
+	width: 50px;
 }
 
 .nav {
-	width: 5%;
+	width: 200px;
 	height: 100%;
-	position: fixed;
 	left: 0;
 	bottom: 0;
 	top: 0;
 	margin: 0;
-	background-color: #2e2c2f;
 	z-index: 100;
+	position: fixed;
+	overflow: hidden;
+	overflow-x: hidden;
+	background-color: #2e2c2f;
 	-moz-transition: 0.3s width ease-in-out;
 	-o-transition: 0.3s width ease-in-out;
 	-webkit-transition: 0.3s width ease-in-out;
 	transition: 0.3s width ease-in-out;
-}
-
-.nav:hover {
-	width: 15%;
-	cursor: pointer;
-}
-
-.nav:hover + .content {
-	width: 85%;
-	-moz-transition: 0.3s width ease-in-out;
-	-o-transition: 0.3s width ease-in-out;
-	-webkit-transition: 0.3s width ease-in-out;
-	transition: 0.3s width ease-in-out;
+	text-align: center;
+	padding-top: 10px;
+	float: left;
 }
 
 .nav > img {
 	width: 80%;
 	height: auto;
+	margin-bottom: 72.5px;
+	-moz-transition: 0.3s margin-bottom ease-in-out;
+	-o-transition: 0.3s margin-bottom ease-in-out;
+	-webkit-transition: 0.3s margin-bottom ease-in-out;
+	transition: 0.3s margin-bottom ease-in-out;
+}
+
+.nav > .nav-icons {
+	border-top: #444444 1px solid;
+	top: 0;
+	left 0;
+}
+
+.nav:hover > img {
+	margin-bottom: 0;
+	-moz-transition: 0.3s margin-bottom ease-in-out;
+	-o-transition: 0.3s margin-bottom ease-in-out;
+	-webkit-transition: 0.3s margin-bottom ease-in-out;
+	transition: 0.3s margin-bottom ease-in-out;
+}
+
+.nav > .nav-icons > .icon {
+	height: 50px;
+	width: 200px;
+	padding-bottom: 10px;
+	border-bottom: #444444 1px solid;
+	cursor: pointer;
+}
+
+.nav > .nav-icons > .icon:hover {
+	background-color: #141314;
+}
+
+.nav > .nav-icons > .icon > p {
+	line-height: 1px;
+	display: inline-block;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-size: 20px;
+	font-family: "Lato", sans-serif;
+	font-weight: 300;
+	letter-spacing: 0.5px;
+	color: #eaeaea;
+	position: relative;
+}
+
+.nav > .nav-icons > .icon:hover > p {
+	color: aquamarine;
+}
+
+.nav > .nav-icons > .icon > img {
+	width: 40px;
+	height: 40px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	float: left;
-	margin-top: .5em;
+	padding-left: 5px;
+}
+
+.nav > .nav-icons > .icon > img {
+	width: 40px;
+	height: 40px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	float: left;
+	padding-left: 5px;
 }
 
 .content {
-	width: 95%;
+	width: 100%;
 	height: 100%;
 	bottom: 0;
 	top: 0;
 	margin: 0;
-	margin-left: 5%;
-	float: right
+	margin-left: 50px;
+	z-index: 10;
+	//background-color: red;
+	display: inline-block;
+	position:fixed;
+	float: right;
+	-moz-transition: 0.3s margin-left ease-in-out;
+	-o-transition: 0.3s margin-left ease-in-out;
+	-webkit-transition: 0.3s margin-left ease-in-out;
+	transition: 0.3s margin-left ease-in-out;
+}
+
+.nav:hover + .content {
+	margin-left: 200px;
+	-moz-transition: 0.3s margin-left ease-in-out;
+	-o-transition: 0.3s margin-left ease-in-out;
+	-webkit-transition: 0.3s margin-left ease-in-out;
+	transition: 0.3s margin-left ease-in-out;
+}
+
+.nav:hover + .content > .content-left{
+	width: 40%;
+	-moz-transition: 0.3s margin-left ease-in-out;
+	-o-transition: 0.3s margin-left ease-in-out;
+	-webkit-transition: 0.3s margin-left ease-in-out;
+	transition: 0.3s margin-left ease-in-out;
 }
 
 .content-left {
-	width: 45%;
+	width: 40%;
 	height: 100%;
-	background-color: blue;
 	float: left;
 	z-index: 5;
 }
 
 .content-right {
-	width: 55%;
+	width: 60%;
 	height: 100%;
-	background-color: red;
 	float: right;
+	//background-color: blue;
+	z-index: 5;
 }
 
 #iam-logo {
@@ -95,5 +178,15 @@ video {
 	top: 33%;
 	text-align: center;
 	vertical-align: middle;
-	opacity: 0.8;
+	opacity: 0.;
+}
+
+.dead-zone {
+	width: 150px;
+	height: 100%;
+	//background-color: black;
+	float: right;
+	position: absolute;
+	z-index: 10;
+	right: 0;
 }
