--- a/IAM website FA15/css/main.css
+++ b/IAM website FA15/css/main.css
@@ -130,7 +130,7 @@ video {
 	margin: 0;
 	margin-left: 50px;
 	z-index: 10;
-	//background-color: red;
+	background-color: red;
 	display: inline-block;
 	position:fixed;
 	float: right;
@@ -141,15 +141,6 @@ video {
 }
 
 .nav:hover + .content {
-	margin-left: 200px;
-	-moz-transition: 0.3s margin-left ease-in-out;
-	-o-transition: 0.3s margin-left ease-in-out;
-	-webkit-transition: 0.3s margin-left ease-in-out;
-	transition: 0.3s margin-left ease-in-out;
-}
-
-.nav:hover + .content > .content-left{
-	width: 40%;
 	-moz-transition: 0.3s margin-left ease-in-out;
 	-o-transition: 0.3s margin-left ease-in-out;
 	-webkit-transition: 0.3s margin-left ease-in-out;
@@ -167,7 +158,7 @@ video {
 	width: 60%;
 	height: 100%;
 	float: right;
-	//background-color: blue;
+	background-color: blue;
 	z-index: 5;
 }
 
@@ -184,7 +175,7 @@ video {
 .dead-zone {
 	width: 150px;
 	height: 100%;
-	//background-color: black;
+	background-color: black;
 	float: right;
 	position: absolute;
 	z-index: 10;
