--- a/IAM website FA15/css/main.css
+++ b/IAM website FA15/css/main.css
@@ -155,7 +155,7 @@ video {
 }
 
 .content-left >.about-content-left {
-    font-family: "lato", sans-serif; 
+    font-family: "PT Sans Caption", sans-serif; 
     font-size: 40px; 
     font-weight: 300;
     background-color: #fbfcfc ;
@@ -163,26 +163,33 @@ video {
     width: auto;
     top: 0;
     text-align: left;
-    padding-left: 20%;
+    padding-left: 15%;
     margin: 0;
-    word-spacing: 10px;
+    word-spacing: 0.5px;
     padding-top: 10%;
-    
 }
+
 ul {
     list-style-type: none;
     line-height: 200%;
-    font-family: "PT sans Caption", sans-serif;
  
 }
-ul > p {
+.about-content-left > p {
     text-align: left;
     font-size: 40px;
-    line-height: 240%;
+    line-height: 200%;
+    padding-left: 10%
 }
 ul > li { 
     line-height: 240%;
     font-size: 15px;
+  
+}
+ul > li:hover{ 
+    color: #fcb040; 
+}
+ul > li:active { 
+    color: #fcb040; 
 }
 .content-right {
 	width: 60%;
