--- a/IAM website FA15/css/main.css
+++ b/IAM website FA15/css/main.css
@@ -216,6 +216,23 @@ ul > li:active {
     width: 50%;
     margin-right: 150px;
 }
+.content-right >.about-content-right-2 {
+    width: 100%;
+    top: 0;
+    font-family: "PT Sans Caption", sans-serif; 
+    font-weight: 100;
+    background-color: #fbfcfc ;
+    text-align: left;
+    margin: 0;
+    padding-top: 10%; 
+    padding-left: 5%;    
+}
+.content-right >.about-content-right-2 > p {
+    width: 50%;
+    font-size: 15px;
+    margin-right: 150px;
+
+}
 
 #iam-logo {
 	width: 100%;
