--- a/IAM website FA15/css/main.css
+++ b/IAM website FA15/css/main.css
@@ -39,7 +39,6 @@ video {
 	margin: 0;
 	z-index: 100;
 	position: fixed;
-	overflow: hidden;
 	overflow-x: hidden;
 	background-color: #2e2c2f;
 	-moz-transition: 0.3s width ease-in-out;
@@ -151,86 +150,88 @@ video {
 	height: 100%;
 	float: left;
 	z-index: 5;
+	font-family: "PT Sans Caption", sans-serif; 
+	font-weight: 300;
+	background-color: #fbfcfc;
 }
 
-.content-left >.about-content-left {
-    font-family: "PT Sans Caption", sans-serif; 
-    font-weight: 300;
-    background-color: #fbfcfc;
-    height: 100%;
-    width: auto;
-    top: 0;
-    text-align: left;
-    padding-left: 15%;
-    margin: 0;
-    word-spacing: 0.5px;
-    padding-top: 10%;
-}
-
-ul {
-    list-style-type: none;
-    line-height: 200%;
- 
-}
-.about-content-left > p {
-    text-align: left;
-    font-size: 40px;
-    line-height: 200%;
-    padding-left: 10%
-}
-ul > li { 
-    line-height: 240%;
-    font-size: 15px;
-  
-}
-ul > li:hover{ 
-    color: #fcb040; 
-}
-ul > li:active { 
-    color: #fcb040; 
+.list-active {
+	color:#fcb040;
 }
 
 .content-right {
 	width: 60%;
 	height: 100%;
 	float: right;
-	background-color: white;
 	z-index: 5;
-}
-.content-right >.about-content-right-1 {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    font-family: "PT Sans Caption", sans-serif; 
-    font-weight: 300;
-    background-color: #fbfcfc ;
-    text-align: left;
-    margin: 0;
-    word-spacing: 0.5px;
-    padding-top: 10%; 
-    padding-left: 5%;
+	/*background-color: blue;*/
 }
 
-.content-right >.about-content-right-1 > p {
-    width: 50%;
-    margin-right: 150px;
+.about-content-left {
+	height: 100%;
+	width: auto;
+	top: 0;
+	text-align: left;
+	padding-left: 15%;
+	margin: 0;
+	word-spacing: 0.5px;
+	padding-top: 10%;
 }
-.content-right >.about-content-right-2 {
-    width: 100%;
-    top: 0;
-    font-family: "PT Sans Caption", sans-serif; 
-    font-weight: 100;
-    background-color: #fbfcfc ;
-    text-align: left;
-    margin: 0;
-    padding-top: 10%; 
-    padding-left: 5%;    
-}
-.content-right >.about-content-right-2 > p {
-    width: 50%;
-    font-size: 15px;
-    margin-right: 150px;
 
+.about-content-left > h3 {
+	text-align: left;
+	font-size: 40px;
+	line-height: 200%;
+	padding-left: 10%
+}
+
+.about-content-right-1 {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	font-family: "PT Sans Caption", sans-serif; 
+	font-weight: 300;
+	text-align: left;
+	margin: 0;
+	word-spacing: 0.5px;
+	padding-top: 10%; 
+	padding-left: 5%;
+}
+
+.about-content-right-1 > p {
+	width: 50%;
+	font-size: 1em;
+	margin-right: 150px;
+}
+
+.about-content-right-2 {
+	width: 100%;
+	top: 0;
+	margin: 0;
+	padding-top: 10%; 
+	padding-left: 5%;  
+	font-family: "PT Sans Caption", sans-serif; 
+	font-weight: 100;
+	text-align: left;
+	display: none;
+}
+
+.about-content-right-2 > p {
+	width: 50%;
+	font-size: 1em;
+	margin-right: 150px;
+}
+
+.list {
+	list-style-type: none;
+	line-height: 200%;
+
+}
+
+.list > li { 
+	line-height: 240%;
+	font-size: 1em;
+	cursor: pointer;
 }
 .content-left >.contact-content-left {
     background-color: #fbfcfc;
@@ -264,7 +265,7 @@ ul > li:active {
 .dead-zone {
 	width: 150px;
 	height: 100%;
-	background-color: black;
+	/*background-color: black;*/
 	float: right;
 	position: absolute;
 	z-index: 10;
